k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: revive-thrive-ingress
  namespace: revive-thrive
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: revivethrivetech.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: revive-thrive-service
                port:
                  number: 80
    - host: www.revivethrivetech.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: revive-thrive-service
                port:
                  number: 80
